Fix responsive of main section on iPhone

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -7,6 +7,8 @@
   --button-secondary-hover: #f2f2f2;
 
   display: grid;
+  align-items: center;
+  justify-content: center;
   min-height: 100svh;
   padding: 30px;
   gap: 64px;
@@ -31,6 +33,8 @@
   margin-top: 30px;
   margin-left: auto;
   margin-right: auto;
+  align-items: center;
+  justify-content: center;
   text-align: center;
 }
 
